--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 html {
     background: url(../src/components/images/background2.jpg) no-repeat center center fixed;
     background-size: cover;
+    cursor: url(../src/components/images/cursor.png) 0 0, pointer;
 }
 
 .container {
